Overflow resolved

--- a/src/app/components/deparments/Department.css
+++ b/src/app/components/deparments/Department.css
@@ -2,96 +2,91 @@
 @import url("https://fonts.googleapis.com/css2?family=Martel:wght@300;400&display=swap");
 :root {
   /* color */
-  --white-color: #FFFFFF;
+  --white-color: #ffffff;
   --green-color: green;
-  --goldish-color: #CCA65D;
+  --goldish-color: #cca65d;
   /* fonts */
   --font-inter: "Inter", sans-serif;
   --font-martel: "Martel", serif;
 }
 
-.department-section{
-    background-color: #F8F8F8;
-    background-image: url("/Hotel\ Wallpaper\ Pattern.png");
+.department-section {
+  background-color: #f8f8f8;
+  background-image: url("/Hotel\ Wallpaper\ Pattern.png");
 }
-.department-heading{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.department-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
- .department-heading h1{
-    color: #619A46;
-    margin-top: 2rem;
-    padding-bottom: 1rem;
-    font-family: var(--font-martel);
- } 
- .department-para p{
-    color: #555555; 
-    font-family: var(--font-inter);
-    font-size: 20px;
-    text-align: center;
- }
+.department-heading h1 {
+  color: #619a46;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+  font-family: var(--font-martel);
+}
+.department-para p {
+  color: #555555;
+  font-family: var(--font-inter);
+  font-size: 20px;
+  text-align: center;
+}
 
- /* -----------carousel side */
- .carousel-2{
-    padding: 5rem;
-    color: #fff;
-    /* width: 100vw; */
-    background-color: #F8F8F8;
-   
- }
- .box{
-   background-color: #F8F8F8;
-   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    width: 300px;
-    height: 340px;
-    border-radius: 15px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
- }
- .box h3{
-    text-align: center;
- }
- .slick-slide div{
-   margin: 0 0.5rem;
-   background-color: #F8F8F8;
- }
- .slick-dots li.slick-active button:before{
-   color: rgb(218, 172, 58) !important;
- }
- .slick-dots li button:before{
-   color: #555555 !important;
-   font-size: 0.8rem !important;
-   top: 2rem !important;
- }
- .caro-img img {
-   max-width: 100%; /* Make sure the image doesn't exceed the width of the div */
-   height: auto; /* Preserve the image's aspect ratio */
- }
- .caro-des h4{
-   padding-top: 1rem;
-   color: #CCA65D;
-    text-align: center;
-    font-family: var(--font-inter);
-    font-weight: 500;
-   
- }
- .caro-btn{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin-top: 20px !important;
- }
- .caro-btn button{
-   color: #000;
-   padding: 3px 7px;
-   border: none;
-   border-radius: 3px;
-   background-color: #e2dddd;
-   font-family: var(--font-inter);
- 
- }
- 
+/* -----------carousel side */
+.carousel-2 {
+  padding: 5rem;
+  color: #fff;
+  /* width: 100vw; */
+  background-color: #f8f8f8;
+}
+.box {
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  width: 300px;
+  height: 340px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.box h3 {
+  text-align: center;
+}
+.slick-slide div {
+  margin: 0 0.5rem;
+  background-color: #f8f8f8;
+}
+.slick-dots li.slick-active button:before {
+  color: rgb(218, 172, 58) !important;
+}
+.slick-dots li button:before {
+  color: #555555 !important;
+  font-size: 0.8rem !important;
+  top: 2rem !important;
+}
+.caro-img img {
+  max-width: 100%; /* Make sure the image doesn't exceed the width of the div */
+  height: auto; /* Preserve the image's aspect ratio */
+}
+.caro-des h4 {
+  padding-top: 1rem;
+  color: #cca65d;
+  text-align: center;
+  font-family: var(--font-inter);
+  font-weight: 500;
+}
+.caro-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px !important;
+}
+.caro-btn button {
+  color: #000;
+  padding: 3px 7px;
+  border: none;
+  border-radius: 3px;
+  background-color: #e2dddd;
+  font-family: var(--font-inter);
+}
