--- a/src/app/components/header/Header.css
+++ b/src/app/components/header/Header.css
@@ -59,8 +59,6 @@
 .nav-carousel {
   display: flex;
   flex-wrap: nowrap;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
 }
 
@@ -96,6 +94,5 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
-    overflow-y: hidden;
   }
 }
