--- a/src/app/pages/course/CoursePage.css
+++ b/src/app/pages/course/CoursePage.css
@@ -23,11 +23,11 @@
   position: absolute;
   left: 80px;
   width: 300px;
+  overflow-y: hidden;
   bottom: 40%;
   z-index: 1000;
   color: var(--white-color);
   font-family: var(--font-martel);
-  overflow: hidden;
   font-size: 40px;
   font-weight: 450;
   line-height: 50px; /* 84.08px */
@@ -57,7 +57,6 @@
   font-family: var(--font-inter);
   font-size: 30px;
   font-style: normal;
-  overflow: hidden;
   font-weight: 500;
   line-height: 105.1%; /* 52.55px */
 }
